...
            "state" : "translated",
            "value" : "Soja"
          }
        }
      }
    },
    "Any Allergies?" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allergien?"
...
            "state" : "translated",
            "value" : "Voltooid"
          }
        }
      }
    },
    "Continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weiter"
...
            "state" : "translated",
            "value" : "Geen recepten gevonden voor jouw dieetprofiel. Pas je voorkeuren aan in Instellingen."
          }
        }
      }
    },
    "Favourites" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoriten"
...
            "state" : "translated",
            "value" : "Ontvang dagelijkse receptsuggesties op maat van jouw voedingswensen."
          }
        }
      }
    },
    "Get Started" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Loslegen"
...
            "state" : "translated",
            "value" : "Terugzetten naar standaard"
          }
        }
      }
    },
    "Restore Purchases" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Käufe wiederherstellen"
          }
...
            "state" : "translated",
            "value" : "Herinneringen instellen"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
...
            "state" : "translated",
            "value" : "Boodschappen"
          }
        }
      }
    },
    "Shopping List" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einkaufsliste"
...
            "state" : "translated",
            "value" : "Overslaan"
          }
        }
      }
    },
    "Skip Notifications" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Benachrichtigungen überspringen"
...
            "state" : "translated",
            "value" : "Vandaag"
          }
        }
      }
    },
    "Today's Recipe" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rezept des Tages"
...
